--- a/xiex-oauth/pom.xml
+++ b/xiex-oauth/pom.xml
@@ -8,9 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>xyz.xiex</groupId>
-    <artifactId>security</artifactId>
+    <artifactId>oauth</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>security</name>
+    <name>oauth</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
