--- a/xiex-oauth/src/main/resources/application.properties
+++ b/xiex-oauth/src/main/resources/application.properties
@@ -14,18 +14,21 @@ eureka.instance.health-check-url-path=/actuator/health
 management.endpoints.web.exposure.include="*"
 management.endpoint.health.show-details=always
 
-spring.datasource.url=
+spring.datasource.url=jdbc:mysql://sh-cdb-4tu4mj0t.sql.tencentcdb.com:63257/xiex
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=Xiehuan!3
 
 eureka.instance.metadata-map.user.name=user
 eureka.instance.metadata-map.user.password=password
 
-xyz.xiex.security.clients[0].clientId=xiex
-xyz.xiex.security.clients[0].resourceIds=123456
-xyz.xiex.security.clients[0].ClientSecret={noop}123456
-xyz.xiex.security.clients[0].authorizedGrantTypes=password,authorization_code,refresh_token
-xyz.xiex.security.clients[0].accessTokenValiditySeconds=
-xyz.xiex.security.clients[0].refreshTokenValiditySeconds=
-xyz.xiex.security.clients[0].scope=
+#当xyz.xiex.security.oauth.saveClientDetailsServiceType为memory时，下面必填
+xyz.xiex.security.oauth.saveClientDetailsServiceType=jdbc
+xyz.xiex.security.oauth.clients[0].clientId=xiex
+xyz.xiex.security.oauth.clients[0].resourceIds=123456
+xyz.xiex.security.oauth.clients[0].ClientSecret={noop}123456
+xyz.xiex.security.oauth.clients[0].authorizedGrantTypes=password,authorization_code,refresh_token
+#xyz.xiex.security.oauth.clients[0].accessTokenValiditySeconds=
+#xyz.xiex.security.oauth.clients[0].refreshTokenValiditySeconds=
+#xyz.xiex.security.oauth.clients[0].scope=
