--- a/xiex-oauth/pom.xml
+++ b/xiex-oauth/pom.xml
@@ -8,9 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>xyz.xiex</groupId>
-    <artifactId>oauth</artifactId>
+    <artifactId>xiex-oauth</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>oauth</name>
+    <name>xiex-oauth</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -18,10 +18,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -38,12 +34,6 @@
             <version>8.18.0</version>
         </dependency>-->
 
-
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
-        </dependency>
 
         <!-- 不是starter,手动配置 -->
         <dependency>
@@ -88,9 +78,10 @@
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
     </dependencies>
 
