feat:update resources

--- a/xiex-demo/src/main/resources/application.properties
+++ b/xiex-demo/src/main/resources/application.properties
@@ -17,16 +17,16 @@ mybatis-plus.configuration.cache-enabled=false
 spring.main.allow-bean-definition-overriding=true
 
 #mongodb≈‰÷√
-spring.data.mongodb.uri=mongodb://119.23.205.255:8081/admin
+spring.data.mongodb.uri=
 
 #redis≈‰÷√
-spring.redis.host=119.23.205.255
+spring.redis.host=
 spring.redis.port=6379
-spring.redis.password=xiehuan
+spring.redis.password=
 
 spring.application.name=xiexDemo
 server.port=1212
 eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone= http://119.23.205.255:8761/eureka/
+eureka.client.service-url.defaultZone=
 
 
